Dodane CashEntry do trzymania wpisow w ksiazce

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,3 @@
 <h1>ZiHeR 2.0 pre-alfa</h1>
-<%= link_to "Edytuj drużyny", units_path %>
+<%= link_to "Pozycje książki", cash_entries_path %> <br/>
+<%= link_to "Drużyny", units_path %>
