Dodane InventoryEntry do trzymania wpisów w książce inwentarzowej

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 <h1>ZiHeR 2.0 pre-alfa</h1>
-<%= link_to "Pozycje książki", cash_entries_path %> <br/>
+<%= link_to "Pozycje książki finansowej", cash_entries_path %> <br/>
+<%= link_to "Pozycje książki inwentarzowej", inventory_entries_path %> <br/>
 <%= link_to "Drużyny", units_path %>
