CashEntry rozbite wcześniej na dwa obiekty i już niepotrzebne

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <h1>ZiHeR 2.0 pre-alfa</h1>
-<%= link_to "Pozycje książki finansowej", cash_entries_path %> <br/>
+<%= link_to "Pozycje książki finansowej - wpływy", revenue_cash_entries_path %> <br/>
+<%= link_to "Pozycje książki finansowej - wydatki", expense_cash_entries_path %> <br/>
 <%= link_to "Pozycje książki inwentarzowej", inventory_entries_path %> <br/>
 <%= link_to "Drużyny", units_path %>
