Etykiety zmienione na polskie

--- a/app/views/expense_cash_entries/_form.html.erb
+++ b/app/views/expense_cash_entries/_form.html.erb
@@ -12,110 +12,88 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :date %><br />
+    <%= f.label :data %>
     <%= f.date_select :date %>
   </div>
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :nazwa %>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :document_number %><br />
+    <%= f.label :numer_dokumentu %>
     <%= f.text_field :document_number %>
   </div>
   <div class="field">
-    <%= f.label :comment %><br />
+    <%= f.label :komentarz %>
     <%= f.text_field :comment %>
   </div>
   <div class="field">
-    <%= f.label :razem %><br />
+    <%= f.label :razem %>
     <%= f.text_field :razem %>
-  </div>
-  <div class="field">
-    <%= f.label :razem_jeden_procent %><br />
+    <%= f.label :razem_jeden_procent %>
     <%= f.text_field :razem_jeden_procent %>
   </div>
   <div class="field">
-    <%= f.label :wyposazenie %><br />
+    <%= f.label :wyposazenie %>
     <%= f.text_field :wyposazenie %>
-  </div>
-  <div class="field">
-    <%= f.label :wyposazenie_jeden_procent %><br />
+    <%= f.label :wyposazenie_jeden_procent %>
     <%= f.text_field :wyposazenie_jeden_procent %>
   </div>
   <div class="field">
-    <%= f.label :materialy %><br />
+    <%= f.label :materialy %>
     <%= f.text_field :materialy %>
-  </div>
-  <div class="field">
-    <%= f.label :materialy_jeden_procent %><br />
+    <%= f.label :materialy_jeden_procent %>
     <%= f.text_field :materialy_jeden_procent %>
   </div>
   <div class="field">
-    <%= f.label :wyzywienie %><br />
+    <%= f.label :wyzywienie %>
     <%= f.text_field :wyzywienie %>
-  </div>
-  <div class="field">
-    <%= f.label :wyzywienie_jeden_procent %><br />
+    <%= f.label :wyzywienie_jeden_procent %>
     <%= f.text_field :wyzywienie_jeden_procent %>
   </div>
   <div class="field">
-    <%= f.label :uslugi %><br />
+    <%= f.label :uslugi %>
     <%= f.text_field :uslugi %>
-  </div>
-  <div class="field">
-    <%= f.label :uslugi_jeden_procent %><br />
+    <%= f.label :uslugi_jeden_procent %>
     <%= f.text_field :uslugi_jeden_procent %>
   </div>
   <div class="field">
-    <%= f.label :transport %><br />
+    <%= f.label :transport %>
     <%= f.text_field :transport %>
-  </div>
-  <div class="field">
-    <%= f.label :transport_jeden_procent %><br />
+    <%= f.label :transport_jeden_procent %>
     <%= f.text_field :transport_jeden_procent %>
   </div>
   <div class="field">
-    <%= f.label :czynsz %><br />
+    <%= f.label :czynsz %>
     <%= f.text_field :czynsz %>
-  </div>
-  <div class="field">
-    <%= f.label :czynsz_jeden_procent %><br />
+    <%= f.label :czynsz_jeden_procent %>
     <%= f.text_field :czynsz_jeden_procent %>
   </div>
   <div class="field">
-    <%= f.label :ubezpieczenie %><br />
+    <%= f.label :ubezpieczenie %>
     <%= f.text_field :ubezpieczenie %>
-  </div>
-  <div class="field">
-    <%= f.label :ubezpieczenie_jeden_procent %><br />
+    <%= f.label :ubezpieczenie_jeden_procent %>
     <%= f.text_field :ubezpieczenie_jeden_procent %>
   </div>
   <div class="field">
-    <%= f.label :inne %><br />
+    <%= f.label :inne %>
     <%= f.text_field :inne %>
-  </div>
-  <div class="field">
-    <%= f.label :inne_jeden_procent %><br />
+    <%= f.label :inne_jeden_procent %>
     <%= f.text_field :inne_jeden_procent %>
   </div>
   <div class="field">
-    <%= f.label :wynagrodzenie %><br />
+    <%= f.label :wynagrodzenie %>
     <%= f.text_field :wynagrodzenie %>
-  </div>
-  <div class="field">
-    <%= f.label :wynagrodzenie_jeden_procent %><br />
+    <%= f.label :wynagrodzenie_jeden_procent %>
     <%= f.text_field :wynagrodzenie_jeden_procent %>
   </div>
   <div class="field">
-    <%= f.label :skladki %><br />
+    <%= f.label :skladki %>
     <%= f.text_field :skladki %>
-  </div>
-  <div class="field">
-    <%= f.label :skladki_jeden_procent %><br />
+    <%= f.label :skladki_jeden_procent %>
     <%= f.text_field :skladki_jeden_procent %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :Zapisz %>
   </div>
 <% end %>
