--- a/app/views/expense_cash_entries/edit.html.erb
+++ b/app/views/expense_cash_entries/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing expense_cash_entry</h1>
+<h1>Edycja wydatku</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @expense_cash_entry %> |
-<%= link_to 'Back', expense_cash_entries_path %>
+<%= link_to 'Powrót', expense_cash_entries_path %>
