--- a/app/views/revenue_cash_entries/_form.html.erb
+++ b/app/views/revenue_cash_entries/_form.html.erb
@@ -12,46 +12,46 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :date %><br />
+    <%= f.label :data %>
     <%= f.date_select :date %>
   </div>
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :nazwa %>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :document_number %><br />
+    <%= f.label :numer_dokumentu %>
     <%= f.text_field :document_number %>
   </div>
   <div class="field">
-    <%= f.label :comment %><br />
+    <%= f.label :komentarz %>
     <%= f.text_field :comment %>
   </div>
   <div class="field">
-    <%= f.label :razem %><br />
+    <%= f.label :razem %>
     <%= f.text_field :razem %>
   </div>
   <div class="field">
-    <%= f.label :darowizny %><br />
+    <%= f.label :darowizny %>
     <%= f.text_field :darowizny %>
   </div>
   <div class="field">
-    <%= f.label :akcje_zarobkowe %><br />
+    <%= f.label :akcje_zarobkowe %>
     <%= f.text_field :akcje_zarobkowe %>
   </div>
   <div class="field">
-    <%= f.label :jeden_procent %><br />
+    <%= f.label :jeden_procent %>
     <%= f.text_field :jeden_procent %>
   </div>
   <div class="field">
-    <%= f.label :inne %><br />
+    <%= f.label :inne %>
     <%= f.text_field :inne %>
   </div>
   <div class="field">
-    <%= f.label :skladki %><br />
+    <%= f.label :skladki %>
     <%= f.text_field :skladki %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :Zapisz %>
   </div>
 <% end %>
