--- a/app/views/revenue_cash_entries/edit.html.erb
+++ b/app/views/revenue_cash_entries/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing revenue_cash_entry</h1>
+<h1>Edycja wpływu</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @revenue_cash_entry %> |
-<%= link_to 'Back', revenue_cash_entries_path %>
+<%= link_to 'Powrót', revenue_cash_entries_path %>
