--- a/app/views/expense_cash_entries/new.html.erb
+++ b/app/views/expense_cash_entries/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New expense_cash_entry</h1>
+<h1>Nowy wydatek</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', expense_cash_entries_path %>
+<%= link_to 'Powrót', expense_cash_entries_path %>
