--- a/app/views/revenue_cash_entries/new.html.erb
+++ b/app/views/revenue_cash_entries/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New revenue_cash_entry</h1>
+<h1>Nowy wpływ</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', revenue_cash_entries_path %>
+<%= link_to 'Powrót', revenue_cash_entries_path %>
