Usuniete pole 'id'; do wpisu dodane kategoria i ksiazka

--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -1,18 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Id:</b>
-  <%= @journal.id %>
-</p>
-
-<p>
   <b>Year:</b>
   <%= @journal.year %>
 </p>
 
 <p>
   <b>Type:</b>
-  <%= @journal.type %>
+  <%= @journal.journal_type %>
 </p>
 
 
