--- a/app/views/journals/_form.html.erb
+++ b/app/views/journals/_form.html.erb
@@ -12,16 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :id %><br />
-    <%= f.number_field :id %>
-  </div>
-  <div class="field">
     <%= f.label :year %><br />
     <%= f.number_field :year %>
   </div>
   <div class="field">
-    <%= f.label :type %><br />
-    <%= f.text_field :type %>
+    <%= f.label :journal_type %><br />
+    <%= f.text_field :journal_type %>
   </div>
   <div class="actions">
     <%= f.submit %>
