Menu. Prosta nawigacja. Prostacka wrecz.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+| <%= link_to "dom", root_path %>
+| <%= link_to "ksiazka inwentarzowa", inventory_entries_path %>
+| <%= link_to "druzyny", units_path %>
+| <%= link_to "wplywy/wydatki", cash_entries_path %>
+| <%= link_to "kategorie", categories_path %>
+
 <%= yield %>
 
 </body>
