Dodane typy ksiazek (JournalType) i powiazane z ksiazkami

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <h1>ZiHeR 2.0 pre-alfa</h1>
 <%= link_to "Ksiazki", journals_path %> <br/>
+<%= link_to "Rodzaje ksiazek", journal_types_path %> <br/>
 <%= link_to "Pozycje książki inwentarzowej", inventory_entries_path %> <br/>
 <%= link_to "Pozycje - wszystkie", cash_entries_path %> <br/>
 <%= link_to "Drużyny", units_path %><br/>
