--- a/app/views/journals/edit.html.erb
+++ b/app/views/journals/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing journal</h1>
+<h1>Edycja książki</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @journal %> |
-<%= link_to 'Back', journals_path %>
+<%= link_to 'Pokaż', @journal %> |
+<%= link_to 'Powrót', journals_path %>
