--- a/app/views/journals/new.html.erb
+++ b/app/views/journals/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New journal</h1>
+<h1>Nowa książka</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', journals_path %>
+<%= link_to 'Powrót', journals_path %>
