--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 | <%= link_to "dom", root_path %>
 | <%= link_to "ksiazka inwentarzowa", inventory_entries_path %>
 | <%= link_to "druzyny", units_path %>
-| <%= link_to "wplywy/wydatki", cash_entries_path %>
+| <%= link_to "wplywy/wydatki", entries_path %>
 | <%= link_to "kategorie", categories_path %>
 
 <%= yield %>
