--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,12 @@
 | <%= link_to "druzyny", units_path %>
 | <%= link_to "wplywy/wydatki", cash_entries_path %>
 | <%= link_to "kategorie", categories_path %>
+<% if user_signed_in? %>
+| <%= current_user.email %> <%= link_to "Wyloguj się", destroy_user_session_path, :method => :delete %>
+<% end %>
+
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
 <%= yield %>
 
