Edycja i zapisywanie wpisów (entry) razem z sumami z różnych kategorii (items). Poza tym usunięte pozostałości cash_entry i drobne zmiany etykiet

--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing entry</h1>
+<h1>Edycja wpisu</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @entry %> |
-<%= link_to 'Back', entries_path %>
+<%= link_to 'Pokaż', @entry %> |
+<%= link_to 'Powrót', entries_path %>
