--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -12,24 +12,25 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :date %><br />
+    <%= f.label :data %>
     <%= f.date_select :date %>
   </div>
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :Treść %>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :document_number %><br />
+    <%= f.label :Numer_dokumentu %>
     <%= f.text_field :document_number %>
   </div>
 
-<% @categories.each do |category| %>
-  <div class="field">
-  <%= category.name %>: <%= @entry.get_amount_for_category(category.id) %><br/>
-
-  </div>
-<% end %>
+  <%= f.fields_for :items do |item_fields| %>
+	<% category_name = item_fields.object.category.name %>
+	<%= item_fields.label :amount, category_name %>
+    <%= item_fields.text_field :amount, :class=>"category" %>
+    <%= item_fields.hidden_field :category_id %>
+    <br/>
+  <% end %>
 
   <div class="actions">
     <%= f.submit %>
