--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New entry</h1>
+<h1>Nowy wpis</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', entries_path %>
+<%= link_to 'Powrót', entries_path %>
