[Fixes #37302903] naprzemienne kolory dla wierszy parzystych i nieparzystych we wpisach do ksiazek

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -14,7 +14,7 @@
   </tr>
 
 <% @entries.each do |entry| %>
-  <tr>
+  <tr class="node <%= cycle("even", "odd") -%>">
     <td><%= entry.date %></td>
     <td><%= entry.name %></td>
     <td><%= entry.document_number %></td>
