--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Entries controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.odd{
+  background-color:#cccccc;
+}
+.even{
+  background-color:#ffffff;
+}
+.node:hover{
+  background-color:#dddddd;
+}
+
