[Fixes #37302611] Dodany datepicker z jquery-ui przy wybieraniu daty w edycji wpisu

--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :data %>
-    <%= f.date_select :date %>
+    <%= f.text_field :date %>
   </div>
   <div class="field">
     <%= f.label :Treść %>
