--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing categories</h1>
+<h1>Kategorie</h1>
 
 <table>
   <tr>
-    <th>Name</th>
-    <th>Isexpense</th>
+    <th>Nazwa</th>
+    <th>Wydatek?</th>
     <th></th>
     <th></th>
     <th></th>
@@ -13,13 +13,13 @@
   <tr>
     <td><%= category.name %></td>
     <td><%= category.isExpense %></td>
-    <td><%= link_to 'Show', category %></td>
-    <td><%= link_to 'Edit', edit_category_path(category) %></td>
-    <td><%= link_to 'Destroy', category, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to 'Pokaż', category %></td>
+    <td><%= link_to 'Edytuj', edit_category_path(category) %></td>
+    <td><%= link_to 'Usuń', category, confirm: 'Na pewno usunąć kategorię?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Category', new_category_path %>
+<%= link_to 'Nowa kategoria', new_category_path %>
