--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,15 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
+  <b>Nazwa:</b>
   <%= @category.name %>
 </p>
 
 <p>
-  <b>Isexpense:</b>
+  <b>Wydatek?</b>
   <%= @category.isExpense %>
 </p>
 
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Edytuj', edit_category_path(@category) %> |
+<%= link_to 'Wstecz', categories_path %>
