--- a/app/views/inventory_entries/edit.html.erb
+++ b/app/views/inventory_entries/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing inventory_entry</h1>
+<h1>Edycja wpisu inwentarzowego</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @inventory_entry %> |
-<%= link_to 'Back', inventory_entries_path %>
+<%= link_to 'Wstecz', inventory_entries_path %>
