--- a/app/views/inventory_entries/show.html.erb
+++ b/app/views/inventory_entries/show.html.erb
@@ -1,40 +1,40 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Date:</b>
+  <b>Data:</b>
   <%= @inventory_entry.date %>
 </p>
 
 <p>
-  <b>Name:</b>
+  <b>Nazwa:</b>
   <%= @inventory_entry.name %>
 </p>
 
 <p>
-  <b>Document number:</b>
+  <b>Numer dokumentu:</b>
   <%= @inventory_entry.document_number %>
 </p>
 
 <p>
-  <b>Amount:</b>
+  <b>Wartość:</b>
   <%= @inventory_entry.amount %>
 </p>
 
 <p>
-  <b>Unit price:</b>
+  <b>Cena jednostkowa:</b>
   <%= @inventory_entry.unit_price %>
 </p>
 
 <p>
-  <b>Source:</b>
+  <b>Źródło:</b>
   <%= @inventory_entry.source %>
 </p>
 
 <p>
-  <b>Stock number:</b>
+  <b>Numer inwentarzowy:</b>
   <%= @inventory_entry.stock_number %>
 </p>
 
 
-<%= link_to 'Edit', edit_inventory_entry_path(@inventory_entry) %> |
-<%= link_to 'Back', inventory_entries_path %>
+<%= link_to 'Edytuj', edit_inventory_entry_path(@inventory_entry) %> |
+<%= link_to 'Wstecz', inventory_entries_path %>
