--- a/app/views/journal_types/_form.html.erb
+++ b/app/views/journal_types/_form.html.erb
@@ -12,10 +12,10 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :nazwa %><br />
     <%= f.text_field :name %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Zapisz"%>
   </div>
 <% end %>
