--- a/app/views/journal_types/edit.html.erb
+++ b/app/views/journal_types/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing journal_type</h1>
+<h1>Edycja rodzaju książki</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @journal_type %> |
-<%= link_to 'Back', journal_types_path %>
+<%= link_to 'Pokaż', @journal_type %> |
+<%= link_to 'Wstecz', journal_types_path %>
