--- a/app/views/journal_types/new.html.erb
+++ b/app/views/journal_types/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New journal_type</h1>
+<h1>Nowy rodzaj książki</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', journal_types_path %>
+<%= link_to 'Wstecz', journal_types_path %>
