--- a/app/views/journals/show.html.erb
+++ b/app/views/journals/show.html.erb
@@ -12,4 +12,4 @@
 
 
 <%= link_to 'Edycja', edit_journal_path(@journal) %> |
-<%= link_to 'Powrót', journals_path %>
+<%= link_to 'Wstecz', journals_path %>
