--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
+  <b>Nazwa:</b>
   <%= @unit.name %>
 </p>
 
 
-<%= link_to 'Edit', edit_unit_path(@unit) %> |
-<%= link_to 'Back', units_path %>
+<%= link_to 'Edytuj', edit_unit_path(@unit) %> |
+<%= link_to 'Wstecz', units_path %>
