--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing category</h1>
+<h1>Edycja kategorii</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @category %> |
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Pokaż', @category %> |
+<%= link_to 'Wstecz', categories_path %>
