--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New category</h1>
+<h1>Nowa kategoria</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Wstecz', categories_path %>
