--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Pokaż', @entry %> |
-<%= link_to 'Powrót', entries_path %>
+<%= link_to 'Wstecz', entries_path %>
