--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -21,13 +21,13 @@
     <% @categories.each do |category| %>
       <td><%= entry.get_amount_for_category(category.id) %></td>
     <% end %>
-    <td><%= link_to 'Show', entry %></td>
-    <td><%= link_to 'Edit', edit_entry_path(entry) %></td>
-    <td><%= link_to 'Destroy', entry, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to 'Pokaż', entry %></td>
+    <td><%= link_to 'Edytuj', edit_entry_path(entry) %></td>
+    <td><%= link_to 'Usuń', entry, confirm: 'Na pewno usunąć wpis?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Entry', new_entry_path %>
+<%= link_to 'Nowy wpis', new_entry_path %>
