--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -24,5 +24,5 @@
 <% end %>
 
 
-<%= link_to 'Edit', edit_entry_path(@entry) %> |
-<%= link_to 'Back', entries_path %>
+<%= link_to 'Edytuj', edit_entry_path(@entry) %> |
+<%= link_to 'Wstecz', entries_path %>
