--- a/app/views/inventory_entries/_form.html.erb
+++ b/app/views/inventory_entries/_form.html.erb
@@ -12,34 +12,34 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :date %><br />
+    <%= f.label :data %><br />
     <%= f.date_select :date %>
   </div>
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :nazwa %><br />
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :document_number %><br />
+    <%= f.label :numer_dokumentu %><br />
     <%= f.text_field :document_number %>
   </div>
   <div class="field">
-    <%= f.label :amount %><br />
+    <%= f.label :wartość %><br />
     <%= f.number_field :amount %>
   </div>
   <div class="field">
-    <%= f.label :unit_price %><br />
+    <%= f.label :cena_jednostkowa %><br />
     <%= f.text_field :unit_price %>
   </div>
   <div class="field">
-    <%= f.label :source %><br />
+    <%= f.label :Źródło %><br />
     <%= f.text_field :source %>
   </div>
   <div class="field">
-    <%= f.label :stock_number %><br />
+    <%= f.label :numer_inwentarzowy %><br />
     <%= f.text_field :stock_number %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Zapisz"%>
   </div>
 <% end %>
