--- a/app/views/inventory_entries/new.html.erb
+++ b/app/views/inventory_entries/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New inventory_entry</h1>
+<h1>Nowy wpis inwentarzowy</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', inventory_entries_path %>
+<%= link_to 'Wstecz', inventory_entries_path %>
