--- a/app/views/journal_types/show.html.erb
+++ b/app/views/journal_types/show.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
+  <b>Nazwa:</b>
   <%= @journal_type.name %>
 </p>
 
 
-<%= link_to 'Edit', edit_journal_type_path(@journal_type) %> |
-<%= link_to 'Back', journal_types_path %>
+<%= link_to 'Edytuj', edit_journal_type_path(@journal_type) %> |
+<%= link_to 'Wstecz', journal_types_path %>
