--- a/app/views/units/edit.html.erb
+++ b/app/views/units/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing unit</h1>
+<h1>Edycja drużyny</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @unit %> |
-<%= link_to 'Back', units_path %>
+<%= link_to 'Wstecz', units_path %>
