--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing units</h1>
+<h1>Drużyny</h1>
 
 <table>
   <tr>
@@ -11,13 +11,13 @@
 <% @units.each do |unit| %>
   <tr>
     <td><%= unit.name %></td>
-    <td><%= link_to 'Show', unit %></td>
-    <td><%= link_to 'Edit', edit_unit_path(unit) %></td>
-    <td><%= link_to 'Destroy', unit, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to 'Pokaż', unit %></td>
+    <td><%= link_to 'Edytuj', edit_unit_path(unit) %></td>
+    <td><%= link_to 'Usuń', unit, confirm: 'Na pewno usunąć drużynę?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Unit', new_unit_path %>
+<%= link_to 'Nowa drużyna', new_unit_path %>
