--- a/app/views/units/new.html.erb
+++ b/app/views/units/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New unit</h1>
+<h1>Nowa drużyna</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', units_path %>
+<%= link_to 'Wstecz', units_path %>
