Pierwsza przymiarka do tabeli wpływów/wydatków

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -12,3 +12,14 @@
   background-color:#dddddd;
 }
 
+
+table { 
+  border: 1px solid;
+  border-collapse: collapse;
+} 
+th { 
+  border: 1px solid;
+}
+td {
+  border: 1px solid;
+}
