Dodanie gema rails-i18n i zmiana locale na pl. Dodanie zakładki Użytkownicy z listą użytkowników i tworzeniem (zapraszaniem) nowego użytkownika.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 | <%= link_to "Kategorie", categories_path %>
 | <%= link_to "Książki", journals_path %> 
 | <%= link_to "Rodzaje książek", journal_types_path %>
+| <%= link_to "Użytkownicy", users_path %>
 <% if user_signed_in? %>
 | <%= current_user.email %> <%= link_to "Wyloguj się", destroy_user_session_path, :method => :delete %>
 <% end %>
