--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -41,8 +41,8 @@
       <% end %>
     <% end %>
 
-    <td><%= entry.incomeSum %></td>
-    <td><%= entry.expenseSum %></td>
+    <td><%= entry.income_sum %></td>
+    <td><%= entry.expense_sum %></td>
 
     <% @categories.each do |category| %>
       <% if category.isExpense == true %>
