Zmiana isExpense na is_expense wedlug konwencji

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :isExpense %><br />
-    <%= f.check_box :isExpense %>
+    <%= f.label :is_expense %><br />
+    <%= f.check_box :is_expense %>
   </div>
   <div class="actions">
     <%= f.submit I18n.t(:save)%>
